# pyimgui

./: .appveyor.yml  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  HACKING.md  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  conftest.py  dropbox_upload.py  pyimconfig.h  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_and_test.yml  main.yml
AnsiFeed/: AnsiTextColored.cpp  AnsiTextColored.h
ansifeed-cpp/: AnsiTextColored.cpp  AnsiTextColored.h
ci/: appveyor_build.cmd  completion.py  docker_build_wheels.sh  dropbox_upload.py  travis_before.sh  travis_build.sh
config-cpp/: py_imconfig.cpp  py_imconfig.h
doc/: Makefile  requirements-dev.txt  requirements-docs.txt  requirements-test.txt
doc/examples/: cocos2d.py  fonts.py  glfw3.py  integrations_all_in_one.py  integrations_cocos2d.py  integrations_cyglfw3.py  integrations_glfw3.py  integrations_glfw3_docking.py  integrations_pygame.py  integrations_pyglet.py  integrations_pysdl2.py  integrations_pysdl3.py  plots.py  pygame_.py  pygame_demo_window_impl  pygame_possible_mistakes  pygame_widget_state  pyglet_.py  pysdl2.py  scope_manager_example.py  testwindow.py
doc/source/: conf.py  convert_readme.py  custom_directives.py  gen_example.py  (+1 more)
examples/: glfw3.py
extensions/: cimgui.pxd  core.pyx  enums.pxd
imgui/: __init__.py  _compat.py  _skipwith.py  _skipwith.pyx  ansifeed.pxd  cimgui.pxd  cimguiAnsiFeed.pxd  common.pyx  core.pxd  core.pyx  enums.pxd  enums.pyx  enums_internal.pxd  enums_internal.pyx  extra.py  extra.pyx  flags.py  imgui.base.pyx  imgui.demo.pyx  imgui.draw.pyx  imgui.tables.pyx  imgui.widgets.pyx  inout.py  internal.pxd  internal.pyx  pre.h  pyimgui_demo.py  utilities.pyx
tests/: conftest.py  dummy_glfw_init.py  test_begin_end_context_managers.py  test_context_mem_safety.py  test_crazy_callbacks.py  test_graphics_mem_safety.py  test_gui_style_initialization.py  test_internal.py
update-tools/: core.pyx.jinja2  enums.pxd.jinja2  enums.py  flags.py.jinja2
(+54 files in other folders)
