[tool.cibuildwheel]

skip = "cp310-*"

build-verbosity = 1

test-command = [
    "cd {package}", 
    "py.test -v --color=yes",
    "coverage run --source imgui -m pytest",
    "coveralls"
]
before-test = "python -m pip install -r doc/requirements-test.txt"

[tool.cibuildwheel.macos]
environment = { LC_ALL="en_US.UTF-8", LANG="en_US.UTF-8" }

[build-system]
requires = [
    "Cython>=0.24,<0.30",
    "PyOpenGL",
    "glfw",
    "wheel",
    "click",
    "setuptools",
]
build-backend = "setuptools.build_meta"
