[tool.cibuildwheel]

build-verbosity = 1

test-command = [
    "cd {package}", 
    "py.test -v --color=yes"
]
before-test = "python -m pip install -r doc/requirements-test.txt"

environment = {FROM_APPVEYOR="true", COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN"}

[tool.cibuildwheel.macos]
environment = { LC_ALL="en_US.UTF-8", LANG="en_US.UTF-8" }

[build-system]
requires = [
    "Cython>=0.24,<0.30",
    "PyOpenGL",
    "glfw",
    "wheel",
    "click",
    "setuptools",
]
build-backend = "setuptools.build_meta"
